package org.example;

import org.example.logic.EscapeRoom;
import org.example.util.Properties;

public class Main {
    public static void main(String[] args) {
        EscapeRoom escapeRoom = new EscapeRoom();
        escapeRoom.run();
    }
}