package org.example.database;

public interface Database {

    public void createIfMissing();

}
